bastion/elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: pw
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    component: node
  name: efk-ingress
  namespace: dapr-monitoring
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /
        pathType: Prefix
  - host: kibana.dev.pw.int
    http:
      paths:
      - backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
        path: /
        pathType: Prefix
